refactor(templates): improve template system architecture and type safety
• Add source tracking to distinguish between project and global templates
• Create new WithSource and LoadedPromptTemplate types for better type safety
• Enhance template validation with detailed feedback and structured testing
• Add path utilities for better template file resolution
• Improve test utilities with more flexible environment setup options
• Remove outdated template files and configurations
• Add comprehensive variable handling for different template types

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,4 +23,10 @@
     "connectionId": "siteed",
     "projectKey": "deeeed_universe"
   },
+  "jestrunner.jestCommand": "NODE_OPTIONS='--experimental-vm-modules --no-warnings' node_modules/.bin/jest",
+  "jestrunner.debugOptions": {
+    "env": {
+      "NODE_OPTIONS": "--experimental-vm-modules --no-warnings",
+    }
+  }
 }
