--- a/packages/gitguard/src/templates/default-commit-split.api.yml
+++ b/packages/gitguard/src/templates/default-commit-split.api.yml
@@ -1,4 +1,4 @@
-type: commit-split
+type: split-commit
 format: api
 title: Conventional Commit Split
 version: "1.0"
@@ -6,68 +6,42 @@ ai:
   provider: openai
   model: gpt-4
 template: |
-  Analyze these git changes and suggest commit messages following conventional commits format.
+  Analyze these git changes and determine if they should be split into multiple commits.
 
   Files Changed:
   {{#each files}}
   - {{this.path}} (+{{this.additions}} -{{this.deletions}})
   {{/each}}
 
-  {{#if stats}}
-  Package Changes:
-  {{#each stats.packages}}
-  - {{@key}}: {{this.files.length}} files ({{this.changes}} changes)
-  {{/each}}
-  {{/if}}
-
-  {{#if scope}}
-  Valid scope: "{{scope}}"
-  {{else}}
-  No specific scope detected
-  {{/if}}
-
-  {{#if message}}
   Original message: "{{message}}"
-  {{/if}}
-
-  {{#if complexity}}
-  Complexity Analysis:
-  - Score: {{complexity.score}}
-  - Reasons: {{complexity.reasons}}
-  {{/if}}
-
-  {{#if includeDetails}}
-  Please provide a bullet-point summary in the details field that includes:
-  • Main architectural/structural changes
-  • Key features added/removed
-  • Important refactoring decisions
-  • Breaking changes (if any)
-  • Impact on existing functionality
-  {{else}}
-  Details field is optional for this commit
-  {{/if}}
 
   Git diff:
   ```diff
   {{diff}}
   ```
 
-  Please provide suggestions in this JSON format:
+  Please provide analysis in this JSON format:
   {
+    "reason": "explanation why changes should be split OR why they work well together (max 100 chars)",
     "suggestions": [
       {
-        "title": "short descriptive title without scope or type",
-        "message": "detailed explanation of the changes",
-        "type": "commit type (feat|fix|docs|style|refactor|test|chore)"
+        "message": "conventional commit message",
+        "files": ["list of files"],
+        "order": 1,
+        "type": "commit type (feat|fix|refactor|etc)",
+        "scope": "affected component or area"
       }
+    ],
+    "commands": [
+      "git commands to execute the split"
     ]
   }
 
   Guidelines:
-  1. Follow conventional commits format: type(scope): description
-  2. Be specific about the changes
-  3. Keep descriptions concise but informative
-  4. Only use the provided scope if one is specified
-  5. Use appropriate type based on the changes
-  6. {{#if includeDetails}}Include detailed commit information in the details field{{else}}Details field is optional{{/if}}
-  7. The "title" field should contain only the description without type or scope
+  1. If changes are cohesive, return empty suggestions array
+  2. Only suggest splits for truly separate concerns
+  3. Keep related changes together (e.g., component + types + tests)
+  4. Follow conventional commits format
+  5. Order suggestions by importance (1 being most important)
+  6. Consider package boundaries
+  7. Provide clear git commands for implementation
