--- a/packages/gitguard/src/templates/default-commit-split.human.yml
+++ b/packages/gitguard/src/templates/default-commit-split.human.yml
@@ -1,4 +1,4 @@
-type: commit-split
+type: split-commit
 format: human
 title: Conventional Commit Split
 version: "1.0"
@@ -6,68 +6,57 @@ ai:
   provider: openai
   model: gpt-4
 template: |
-  Analyze these git changes and suggest commit messages following conventional commits format.
+  You are a helpful AI assistant specializing in Git commits. Please analyze these changes and determine if they should be split into multiple commits:
 
   Files Changed:
   {{#each files}}
   - {{this.path}} (+{{this.additions}} -{{this.deletions}})
   {{/each}}
 
-  {{#if stats}}
-  Package Changes:
-  {{#each stats.packages}}
-  - {{@key}}: {{this.files.length}} files ({{this.changes}} changes)
-  {{/each}}
-  {{/if}}
-
-  {{#if scope}}
-  Valid scope: "{{scope}}"
-  {{else}}
-  No specific scope detected
-  {{/if}}
-
-  {{#if message}}
   Original message: "{{message}}"
-  {{/if}}
-
-  {{#if complexity}}
-  Complexity Analysis:
-  - Score: {{complexity.score}}
-  - Reasons: {{complexity.reasons}}
-  {{/if}}
-
-  {{#if includeDetails}}
-  Please provide a bullet-point summary in the details field that includes:
-  • Main architectural/structural changes
-  • Key features added/removed
-  • Important refactoring decisions
-  • Breaking changes (if any)
-  • Impact on existing functionality
-  {{else}}
-  Details field is optional for this commit
-  {{/if}}
 
   Git diff:
   ```diff
   {{diff}}
   ```
 
-  Please provide suggestions in this JSON format:
-  {
-    "suggestions": [
-      {
-        "title": "short descriptive title without scope or type",
-        "message": "detailed explanation of the changes",
-        "type": "commit type (feat|fix|docs|style|refactor|test|chore)"
-      }
-    ]
-  }
+  Please provide your analysis in the following format:
+
+  # Analysis
+  [Explain whether these changes should be split and why]
+
+  {{#if shouldSplit}}
+  # Commit Structure
+  ```mermaid
+  graph TD
+    C1[1. feat: first change] --> C2[2. fix: dependent change]
+    C2 --> C3[3. refactor: final change]
+    style C1 fill:#f9f,stroke:#333
+    style C2 fill:#bbf,stroke:#333
+    style C3 fill:#bfb,stroke:#333
+  ```
+
+  # Migration Script
+  ```bash
+  # Commit 1: feat(scope): descriptive title
+  git add [specific files]
+  git commit -m "feat(scope): descriptive title" -m "detailed description"
+
+  # Commit 2: fix(scope): another descriptive title
+  git add [specific files]
+  git commit -m "fix(scope): descriptive title" -m "detailed description"
+
+  # [Additional commits as needed...]
+  ```
+  {{/if}}
 
   Guidelines:
-  1. Follow conventional commits format: type(scope): description
-  2. Be specific about the changes
-  3. Keep descriptions concise but informative
-  4. Only use the provided scope if one is specified
-  5. Use appropriate type based on the changes
-  6. {{#if includeDetails}}Include detailed commit information in the details field{{else}}Details field is optional{{/if}}
-  7. The "title" field should contain only the description without type or scope
+  1. Evaluate if changes represent truly separate concerns
+  2. Keep related changes together (components + types + tests)
+  3. Consider package boundaries
+  4. Maintain proper dependency order
+  5. Use conventional commits format
+  6. Provide executable git commands
+  7. Include clear commit messages with descriptions
+
+  Note: If the changes are cohesive and work well together, explain why they should remain as a single commit.
