--- a/packages/gitguard/package.json
+++ b/packages/gitguard/package.json
@@ -104,6 +104,7 @@
     "jest": "^29.7.0",
     "rimraf": "^5.0.5",
     "rollup": "^4.12.0",
+    "rollup-plugin-copy": "^3.5.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.2.2"
