feat(templates): add active flag to control template visibility
- Add active flag to template type definition
- Filter out inactive templates in registry
- Add tests for inactive template filtering
- Update template display to show inactive status
- Mark all default templates as active

--- a/packages/gitguard/src/templates/default-commit-split.api.yml
+++ b/packages/gitguard/src/templates/default-commit-split.api.yml
@@ -2,6 +2,8 @@ type: split-commit
 format: api
 title: Conventional Commit Split
 version: "1.0"
+active: true
+simulate: true
 ai:
   provider: openai
   model: gpt-4
