--- a/packages/gitguard/src/templates/default-commit-split.human.yml
+++ b/packages/gitguard/src/templates/default-commit-split.human.yml
@@ -2,6 +2,7 @@ type: split-commit
 format: human
 title: Conventional Commit Split
 version: "1.0"
+active: true
 ai:
   provider: openai
   model: gpt-4
