--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -37,7 +37,7 @@
       "skipFiles": ["<node_internals>/**"],
       "cwd": "${workspaceFolder}/packages/gitguard",
       "program": "${workspaceFolder}/packages/gitguard/src/cli/gitguard.ts",
-      "args": ["branch", "analyze", "--split"],
+      "args": ["branch", "edit", "--ai"],
       "runtimeArgs": [
         "--loader",
         "ts-node/esm",
