feat(gitguard): enhance template system and add API convenience features (#31)
* feat(templates): improve template file handling and distribution

• Add skipGlobal option to TemplateRegistry for controlling global template loading
• Implement robust template directory discovery for both dev and prod environments
• Configure rollup to copy template files to dist/cjs and dist/esm directories
• Add rollup-plugin-copy dependency

* chore(build): consolidate template directory and enable declarations

* feat(templates): add active flag to control template visibility

- Add active flag to template type definition
- Filter out inactive templates in registry
- Add tests for inactive template filtering
- Update template display to show inactive status
- Mark all default templates as active

* feat(ai): enhance template handling and API clipboard support

- Add apiClipboard configuration option
- Add support for copying API prompts to clipboard
- Update template result interface with system prompt
- Add API clipboard status to config display

* feat(openai): add detailed token usage and cost logging

- Add input token calculation and logging
- Add completion cost calculation
- Add detailed logging of token usage and costs

* refactor(controllers): streamline template handling

- Update controllers to use new template result interface
- Remove deprecated commit analysis methods
- Standardize template handling across controllers

* feat(gitguard): add logo and branding assets

Add GitGuard logo in multiple formats:
- SVG vector format with shield design
- PNG with transparent background
- WebP compressed format

* refactor(gitguard): simplify AI controller logic

- Remove redundant AI provider check
- Make AI enabled by default
- Update launch config for AI branch editing

* feat(templates): enhance commit and PR prompt templates with multi-option output

Update default templates to provide more structured outputs

• Add supp

--- a/packages/gitguard/src/templates/default-commit.human.yml
+++ b/packages/gitguard/src/templates/default-commit.human.yml
@@ -2,6 +2,7 @@ type: commit
 format: human
 title: "Conventional Commit Guide (Human)"
 version: "1.0"
+active: true
 ai:
   provider: openai
   model: gpt-4
@@ -26,12 +27,6 @@ template: |
   {{message}}
   {{/if}}
 
-  {{#if complexity}}
-  Complexity Analysis:
-  - Score: {{complexity.score}}
-  - Reasons: {{complexity.reasons}}
-  {{/if}}
-
   {{#if scope}}
   Suggested scope: {{scope}}
   {{/if}}
@@ -45,25 +40,40 @@ template: |
   {{diff}}
   ```
 
-  Please suggest a commit message following the Conventional Commits format (https://www.conventionalcommits.org/). 
-  The message should include:
+  Please suggest three different commit messages following the Conventional Commits format (https://www.conventionalcommits.org/). 
+  Each suggestion should have a different focus or perspective on the changes.
+  
+  For each suggestion include:
   1. Type (feat, fix, docs, style, refactor, test, chore)
   2. Optional scope in parentheses
   3. Clear, concise description
   4. Optional detailed explanation for complex changes
 
   Respond with:
-  1. Your reasoning for the suggested message
-  2. The complete commit message
-  3. The command to copy (no formatting, quotes, or backticks)
+  1. Brief explanation of each suggestion's focus
+  2. Three complete commit messages
+  3. The commands to copy (no formatting, quotes, or backticks)
 
   Example response format:
-  Reasoning: [your explanation]
-
+  # Option 1: [Brief explanation of focus]
   Suggested message:
   [complete commit message]
 
-  Command to copy:
-  git commit -m "type(scope): title" -m $'detailed message line 1\n• point 1\n• point 2\n• point 3'
+  Command:
+  git commit -m "type(scope): title" -m $'detailed message line 1\n• point 1\n• point 2'
 
-  Note: The command must use $'string' syntax with \n for newlines to create a properly formatted multi-line commit message. 
+  # Option 2: [Brief explanation of focus]
+  Suggested message:
+  [complete commit message]
+
+  Command:
+  git commit -m "type(scope): title" -m $'detailed message'
+
+  # Option 3: [Brief explanation of focus]
+  Suggested message:
+  [complete commit message]
+
+  Command:
+  git commit -m "type(scope): title"
+
+  Note: The commands must use $'string' syntax with \n for newlines to create properly formatted multi-line commit messages.
